parser gets fractions as one number

--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import random as rnd\n",
-    "import yargy\n",
     "import pymorphy2 as pmh\n",
-    "from yargy import and_, or_, not_\n",
+    "\n",
+    "import yargy\n",
     "from yargy.tokenizer import MorphTokenizer\n",
+    "from yargy import Parser, rule, and_, or_\n",
+    "from yargy.predicates import gram, dictionary, custom, true\n",
+    "from yargy.pipelines import morph_pipeline\n",
+    "\n",
     "import itertools as it\n",
     "import typing as t\n",
     "from overrides import overrides"
@@ -20,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -178,20 +182,6 @@
    },
    "outputs": [],
    "source": [
-    "from yargy import Parser, rule, and_, or_\n",
-    "from yargy.predicates import gram, dictionary, custom, true\n",
-    "from yargy.pipelines import morph_pipeline\n",
-    "from yargy.interpretation import fact"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "def is_number(string):\n",
     "    for c in string:\n",
     "        if((ord(c) < 48 or ord(c) > 57) and not (c == \".\" or c == \",\")):\n",
@@ -202,7 +192,15 @@
     "    or_(\n",
     "        gram(\"NUMR\"),\n",
     "        is_number_\n",
-    "    )\n",
+    "    ),\n",
+    "    morph_pipeline([\n",
+    "        \",\",\n",
+    "        \".\"\n",
+    "    ]).optional(),\n",
+    "    or_(\n",
+    "        gram(\"NUMR\"),\n",
+    "        is_number_\n",
+    "    ).optional()\n",
     ")"
    ]
   },
@@ -228,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "PRICE_FROM = rule(\n",
@@ -447,7 +447,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class SlotFilling:\n",
