--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -24,10 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class SimpleTextGenerator:\n",
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +163,7 @@
        "'купить велосипед стоить маленький три тысяча рубль в кредит'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +204,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '.', '8']\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Parser(NUMBER_RULE)\n",
+    "for match in p.findall(\"купить велик за 2.8 тысяч\"):\n",
+    "    print([_.value for _ in match.tokens])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -225,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -285,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2', '%']\n"
+      "['5', '.', '2', '%']\n"
      ]
     }
    ],
@@ -351,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +386,7 @@
        "'купить горный велик в кредит   до 20к'"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,35 +411,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'values': frozenset({'perf', 'tran', 'INFN'})}\n",
-      "{'values': frozenset({'sing', 'ADJF', 'Qual', 'nomn', 'masc'})}\n",
-      "{'values': frozenset({'sing', 'nomn', 'inan', 'NOUN', 'masc'})}\n",
-      "{'values': frozenset({'PREP'})}\n",
-      "{'values': frozenset({'sing', 'accs', 'inan', 'NOUN', 'masc'})}\n",
-      "{'values': frozenset({'PREP'})}\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Token' object has no attribute 'forms'",
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-115-82d5f3c63c4c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstring\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\" \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtxt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrams\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Token' object has no attribute 'forms'"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-a58d2764dd24>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtokenizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMorphTokenizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstring\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\" \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtxt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrams\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
      ]
     }
    ],
    "source": [
-    "t = MorphTokenizer()\n",
+    "tokenizer = MorphTokenizer()\n",
     "string = \" \"\n",
     "for i in t(txt):\n",
     "    print(i.forms[0].grams.__dict__)\n",
@@ -431,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -446,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -488,8 +495,8 @@
     "            cashback_tokens = parser.findall(cashback)\n",
     "            for match in cashback_tokens:\n",
     "                cashback += ' '.join([_.value for _ in match.tokens])\n",
-    "        parsed['Cashback'] = cashback\n",
-    "         #find  price\n",
+    "        parsed['Cashback'] = cashback.replace(\" \", \"\")\n",
+    "        #find  price\n",
     "        parsed['Price'] = {\"From\" : \"NaN\", \"To\": \"NaN\"}\n",
     "        is_value = 0\n",
     "        price_keys_list = list(parsed['Price'].keys())\n",
@@ -531,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -545,61 +552,61 @@
      "data": {
       "text/plain": [
        "{'Attributes': 'горный велосипед',\n",
-       " 'Cashback': '20 %',\n",
+       " 'Cashback': '20.51%',\n",
        " 'Item': 'велосипед',\n",
        " 'Price': {'From': 'от 14 тысяч', 'To': 'до 40 к'}}"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "SF = SlotFilling()\n",
-    "text = \"где купить от 14 тысяч горный велосипед до 40к 20% кэшбек\"\n",
+    "text = \"где купить от 14 тысяч горный велосипед до 40к 20.51% кэшбек\"\n",
     "SF.Parse(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "купить 15% 20% кэшбек скейт до 40к\n",
-      " купить 15 % скейт \n",
-      "{'Item': 'скейт', 'Cashback': '20 %', 'Price': {'From': 'NaN', 'To': 'до 40 к'}}\n",
-      "велик кэшбек купить 15% от 13 тыс до 40к\n",
-      " велик купить 15 % \n",
-      "{'Item': 'велик', 'Cashback': '', 'Price': {'From': 'от 13 тыс', 'To': 'до 40 к'}}\n",
-      "велик от 13 тыс купить до 56 тысяч 5к с кэшбеком\n",
-      " велик купить 5 к с \n",
-      "{'Item': 'велик', 'Cashback': '', 'Price': {'From': 'от 13 тыс', 'To': 'до 56 тысяч'}}\n",
-      "до 40к велосипед купить 15% с кэшбеком 3 процента\n",
-      " велосипед купить 15 % с \n",
-      "{'Item': 'велосипед', 'Cashback': '3 процента', 'Price': {'From': 'NaN', 'To': 'до 40 к'}}\n",
-      "до 56 тысяч 15% от 20к\n",
-      " 15 % \n",
-      "{'Cashback': '', 'Price': {'From': 'от 20 к', 'To': 'до 56 тысяч'}}\n",
-      "20% кэшбек 15% самокат от 13 тыс до 56 тысяч купить\n",
-      " самокат купить \n",
-      "{'Cashback': '20 %15 %', 'Price': {'From': 'от 13 тыс', 'To': 'до 56 тысяч'}}\n",
-      "до 40к от 20к 5к купить с кэшбеком 3 процента\n",
-      " 5 купить с \n",
-      "{'Cashback': '3 процента', 'Price': {'From': 'от 20 к', 'To': 'до 40 к'}}\n",
-      "купить кэшбек до 56 тысяч байк 15% от 20к\n",
-      " купить байк 15 % \n",
-      "{'Item': 'байк', 'Cashback': '', 'Price': {'From': 'от 20 к', 'To': 'до 56 тысяч'}}\n",
-      "20% кэшбек 15% самокат купить от 13 тыс\n",
-      " самокат купить \n",
-      "{'Cashback': '20 %15 %', 'Price': {'From': 'от 13 тыс', 'To': 'NaN'}}\n",
-      "5к купить до 56 тысяч велик кэшбек\n",
-      " 5 к купить велик \n",
-      "{'Item': 'велик', 'Cashback': '', 'Price': {'From': 'NaN', 'To': 'до 56 тысяч'}}\n"
+      "скейтбоард 15% купить до 56 тысяч от 14 тысяч\n",
+      " скейтбоард 15 % купить \n",
+      "{'Cashback': '', 'Price': {'From': 'от 14 тысяч', 'To': 'до 56 тысяч'}, 'Attributes': 'скейтбоард', 'Item': 'скейтбоард'}\n",
+      "до 56 тысяч кэшбек байк от 13 тыс 15% купить\n",
+      " до байк 15 % купить \n",
+      "{'Cashback': '56 тысяч', 'Price': {'From': 'от 13 тыс', 'To': 'NaN'}, 'Attributes': 'байк', 'Item': 'байк'}\n",
+      "от 13 тыс до 40к 5к купить\n",
+      " 5 купить \n",
+      "{'Cashback': '', 'Price': {'From': 'от 13 тыс', 'To': 'до 40 к'}, 'Attributes': 'NaN'}\n",
+      "до 56 тысяч байк купить\n",
+      " байк купить \n",
+      "{'Cashback': '', 'Price': {'From': 'NaN', 'To': 'до 56 тысяч'}, 'Attributes': 'байк', 'Item': 'байк'}\n",
+      "с кэшбеком 3 процента 15% купить до 56 тысяч скейт от 14 тысяч\n",
+      " с 15 % купить скейт \n",
+      "{'Cashback': '3 процента', 'Price': {'From': 'от 14 тысяч', 'To': 'до 56'}, 'Attributes': 'скейт', 'Item': 'скейт'}\n",
+      "15% велик 20% кэшбек до 40к от 13 тыс\n",
+      " 15 велик \n",
+      "{'Cashback': '20 %', 'Price': {'From': 'от 13 тыс', 'To': 'до 40 к'}, 'Attributes': 'велик', 'Item': 'велик'}\n",
+      "от 14 тысяч байк кэшбек 15% до 40к\n",
+      " байк \n",
+      "{'Cashback': '15 %', 'Price': {'From': 'от 14 тысяч', 'To': 'до 40 к'}, 'Attributes': 'байк', 'Item': 'байк'}\n",
+      "5к купить самокат 20% кэшбек до 40к\n",
+      " 5 купить самокат \n",
+      "{'Cashback': '20 %', 'Price': {'From': 'NaN', 'To': 'до 40 к'}, 'Attributes': 'самокат'}\n",
+      "до 40к от 20к кэшбек 5к самокат\n",
+      " от самокат \n",
+      "{'Cashback': '20 к5 к', 'Price': {'From': 'NaN', 'To': 'до 40'}, 'Attributes': 'самокат'}\n",
+      "5к от 14 тысяч купить до 40к байк с кэшбеком 3 процента\n",
+      " 5 купить байк с \n",
+      "{'Cashback': '3 процента', 'Price': {'From': 'от 14 тысяч', 'To': 'до 40 к'}, 'Attributes': 'байк с', 'Item': 'байк'}\n"
      ]
     }
    ],
