yargy rules in own file yargy_rules.py

--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -204,25 +204,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2', '.', '8']\n"
-     ]
-    }
-   ],
-   "source": [
-    "p = Parser(NUMBER_RULE)\n",
-    "for match in p.findall(\"купить велик за 2.8 тысяч\"):\n",
-    "    print([_.value for _ in match.tokens])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {
     "collapsed": true
@@ -298,6 +279,29 @@
     "        )\n",
     "    ).optional().repeatable()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['велосипед']\n",
+      "['с']\n",
+      "['держателем']\n",
+      "['воды']\n",
+      "['кэшбек']\n"
+     ]
+    }
+   ],
+   "source": [
+    "parser = Parser(SPORT_ITEM)\n",
+    "for match in parser.findall(\"купить велосипед с держателем для воды недорого кэшбек 5%\"):\n",
+    "    print([_.value for _ in match.tokens])"
    ]
   },
   {
@@ -453,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -538,33 +542,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " где купить горный велосипед \n"
+      " где купить горный велосипед процентов \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Attributes': 'горный велосипед',\n",
-       " 'Cashback': '20.51%',\n",
+       "{'Attributes': 'горный велосипед процентов',\n",
+       " 'Cashback': '20.51тысяч',\n",
        " 'Item': 'велосипед',\n",
-       " 'Price': {'From': 'от 14 тысяч', 'To': 'до 40 к'}}"
+       " 'Price': {'From': 'от 14', 'To': 'до 40 к'}}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "SF = SlotFilling()\n",
-    "text = \"где купить от 14 тысяч горный велосипед до 40к 20.51% кэшбек\"\n",
+    "text = \"где купить от 14 тысяч горный велосипед до 40к процентов 20.51 тысяч кэшбек\"\n",
     "SF.Parse(text)"
    ]
   },
