--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -542,6 +542,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tq\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\tq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [
