rewrite attribute search

--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -442,22 +442,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "MEANING = rule(\n",
+    "    not_(\n",
+    "        or_(\n",
+    "            or_(\n",
+    "                gram(\"INFN\"),\n",
+    "                gram(\"VERB\")\n",
+    "            ),\n",
+    "            or_(\n",
+    "                or_(\n",
+    "                    gram(\"PREP\"), gram(\"CONJ\")\n",
+    "                ),\n",
+    "                or_(\n",
+    "                    gram(\"PRCL\"), gram(\"ADVB\")\n",
+    "                )\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
     "ATTRIBUTE = rule(\n",
-    "    gram(\"ADJF\").optional().repeatable(),\n",
-    "    gram(\"NOUN\").repeatable(),\n",
-    "    gram(\"ADJF\").optional().repeatable()\n",
+    "    MEANING.optional().repeatable(),\n",
+    "    gram(\"NOUN\").repeatable()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -542,50 +557,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tq\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\tq\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " где купить горный велосипед процентов \n"
+      " где купить горный велосипед XTCK - 245 \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Attributes': 'горный велосипед процентов',\n",
-       " 'Cashback': '20.51тысяч',\n",
+       "{'Attributes': 'горный велосипед',\n",
+       " 'Cashback': '5тысяч',\n",
        " 'Item': 'велосипед',\n",
        " 'Price': {'From': 'от 14', 'To': 'до 40 к'}}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "SF = SlotFilling()\n",
-    "text = \"где купить от 14 тысяч горный велосипед до 40к процентов 20.51 тысяч кэшбек\"\n",
+    "text = \"где купить от 14 тысяч горный велосипед XTCK-245 до 40к 5 тысяч кэшбек\"\n",
     "SF.Parse(text)"
    ]
   },
