--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -472,6 +472,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Program Files (x86)\\\\Microsoft Visual Studio\\\\Shared\\\\Anaconda3_64\\\\python.exe'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.executable"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {
     "collapsed": true
@@ -549,7 +570,6 @@
     "                #while True:\n",
     "                #    pass\n",
     "        \n",
-    "        print(string)\n",
     "        return parsed\n",
     "    def Parse(self, string):\n",
     "        return self.Parsing(self.Preprocess(string))"
