SlotFller with metaclass

--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +555,10 @@
     "            for match in price_tokens:\n",
     "                price = ' '.join([_.value for _ in match.tokens])\n",
     "                parsed['Price'][\"From\"] = parsed['Price'][\"To\"] = price\n",
+    "                for token in match.tokens:\n",
+    "                    strin\n",
     "        \n",
+    "        print(string)\n",
     "        parser = Parser(ATTRIBUTE)\n",
     "        attr_tokens = parser.findall(string)\n",
     "        attr = \"\"\n",
@@ -577,33 +580,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " где купить горный велосипед XTCK - 245 \n"
+      " \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Attributes': 'горный велосипед',\n",
-       " 'Cashback': '5тысяч',\n",
+       "{'Attributes': '50 к',\n",
+       " 'Cashback': '',\n",
        " 'Item': 'велосипед',\n",
-       " 'Price': {'From': 'от 14', 'To': 'до 40 к'}}"
+       " 'Price': {'From': '50 к', 'To': '50 к'}}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "SF = SlotFilling()\n",
-    "text = \"где купить от 14 тысяч горный велосипед XTCK-245 до 40к 5 тысяч кэшбек\"\n",
+    "text = \"купить горный велосипед за 50к\"\n",
     "SF.Parse(text)"
    ]
   },
