normalizing form for item

--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -493,12 +493,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 87,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import pymorphy2 as pmh\n",
+    "par = pmh.MorphAnalyzer()\n",
     "class SlotFilling:\n",
     "    def __init__(self):\n",
     "        self.dict = dict()\n",
@@ -547,7 +547,7 @@
     "                is_value += 1\n",
     "                parsed['Price'][price_keys_list[i]] = ' '.join([_.value for _ in match.tokens])\n",
     "                for token in match.tokens:\n",
-    "                    string = string.replace(\" \" + token.value + \" \", \" \")\n",
+    "                    string = string.replace(token.value + \" \", \" \")\n",
     "        if (is_value == 0):\n",
     "            parser = Parser(PRICE_VALUE)\n",
     "            price_tokens = parser.findall(string)\n",
@@ -556,7 +556,7 @@
     "                price = ' '.join([_.value for _ in match.tokens])\n",
     "                parsed['Price'][\"From\"] = parsed['Price'][\"To\"] = price\n",
     "                for token in match.tokens:\n",
-    "                    strin\n",
+    "                    string = string.replace(token.value + \" \", \"\")\n",
     "        \n",
     "        print(string)\n",
     "        parser = Parser(ATTRIBUTE)\n",
@@ -568,7 +568,7 @@
     "                parsed['Attributes'] = attr\n",
     "        for word in words:\n",
     "            #find Item\n",
-    "            if(word in self.dict['goods']):\n",
+    "            if(par.parse(word)[0].normal_form in self.dict['goods']):\n",
     "                parsed['Item'] = word\n",
     "                #while True:\n",
     "                #    pass\n",
@@ -580,26 +580,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n"
+      " купить горный велосипед за \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Attributes': '50 к',\n",
+       "{'Attributes': 'горный велосипед',\n",
        " 'Cashback': '',\n",
        " 'Item': 'велосипед',\n",
        " 'Price': {'From': '50 к', 'To': '50 к'}}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
