--- a/data/merge.ipynb
+++ b/data/merge.ipynb
@@ -11,11 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(384, 6)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -125,14 +132,36 @@
        "4  Бронирование отелей через Тинькофф Путешествия...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_excel('./current_offers.xlsx')\n",
+    "print(data.shape)\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(370, 6)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data[~data['WEB'].isna()]\n",
+    "data.shape"
    ]
   },
   {
@@ -140,6 +169,82 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(357, 6)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data[~((data['CASH_BACK_HEIGHT'] == 0) & (data['OFFER_TYPE'] != 'SPECIAL_CREDIT'))]\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unique(data, cols):\n",
+    "    new_data = []\n",
+    "    for gr in data.groupby('NAME'):    \n",
+    "        gr = gr[1]\n",
+    "        gr = gr.drop_duplicates(subset=cols)\n",
+    "\n",
+    "        if len(gr) > 1:\n",
+    "            if len(gr['OFFER_TYPE'].unique()) == 1:\n",
+    "                gr = gr[gr['CASH_BACK_HEIGHT'] == gr['CASH_BACK_HEIGHT'].max()]\n",
+    "            else:\n",
+    "                gr1 = gr[gr['CASH_BACK_HEIGHT'] == gr['CASH_BACK_HEIGHT'].max()]\n",
+    "                gr2 = gr[gr['OFFER_TYPE'] == 'SPECIAL_CREDIT']\n",
+    "                gr = pd.concat([gr1, gr2])\n",
+    "\n",
+    "        assert len(gr) <= 2\n",
+    "\n",
+    "        new_data.append(gr)\n",
+    "\n",
+    "    return pd.concat(new_data).sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(350, 6)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = unique(data, cols=['CASH_BACK_HEIGHT'])\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(688, 7)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -248,19 +353,104 @@
        "4  Gett — один из мировых лидеров заказа такси. С...        Для детей  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "web = pd.read_excel('./offers_with_categories.xlsx')\n",
+    "print(web.shape)\n",
     "web.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72, 7)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web = web[(web['CATEGORY_NAME'] == 'Спорт') | (web['CATEGORY_NAME'] == 'Еда и продукты')]\n",
+    "web.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72, 7)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web = web[~web['CATEGORY_NAME'].isna()]\n",
+    "web.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(63, 7)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web = web[~((web['CASH_BACK_HEIGHT'] == 0) & (web['OFFER_TYPE'] != 'SPECIAL_CREDIT'))]\n",
+    "web.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(59, 7)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web = unique(web, cols=['CASH_BACK_HEIGHT', 'CATEGORY_NAME'])\n",
+    "web.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,20 +462,7 @@
     "        if len(cats) == 0:\n",
     "            continue\n",
     "\n",
-    "        if len(cats) > 1:\n",
-    "            #sc = cats[cats['OFFER_TYPE'] == 'SPECIAL_CREDIT']\n",
-    "            cats = cats[cats['ADVERT_TEXT'] == row['ADVERT_TEXT']]\n",
-    "            cats = cats[cats['CASH_BACK_HEIGHT'] > 0]\n",
-    "            if len(cats) == 0:\n",
-    "                continue\n",
-    "\n",
-    "        if len(cats) > 1:\n",
-    "            cats = cats[:1]\n",
-    "\n",
-    "        if row['WEB'] != row['WEB']:\n",
-    "            continue\n",
-    "\n",
-    "        assert len(cats) == 1, cats\n",
+    "        assert len(cats) == 1 or (len(cats) == 2 and len(cats['OFFER_TYPE'].unique()) == 2), cats\n",
     "        offer_with_cats.append(row)\n",
     "        \n",
     "    return pd.DataFrame(offer_with_cats)"
@@ -293,28 +470,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "29"
+       "((350, 6), (59, 7))"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape, web.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29, 6)"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sport = merge('Спорт')\n",
-    "len(sport)"
+    "sport.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,16 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36"
+       "29"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
