intersected webs from 2 cats are added

--- a/data/merge.ipynb
+++ b/data/merge.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -546,6 +547,19 @@
    "outputs": [],
    "source": [
     "eda.to_excel('food.xls', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = np.intersect1d(sport['NAME'], eda['NAME'])\n",
+    "d = []\n",
+    "for name in names:\n",
+    "    d.append(sport[sport['NAME'] == name])\n",
+    "pd.concat(d).to_excel('intersect.xls', index=False)"
    ]
   }
  ],
