attribute contains all information about item except cashback and price. percent always means cashback

--- a/offer_search/slot_filling/Notebook/SlotFilling.ipynb
+++ b/offer_search/slot_filling/Notebook/SlotFilling.ipynb
@@ -580,6 +580,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
    "outputs": [
