multi match is added

--- a/how_to_elastic.ipynb
+++ b/how_to_elastic.ipynb
@@ -155,81 +155,78 @@
     {
      "data": {
       "text/plain": [
-       "{'took': 4,\n",
+       "{'took': 5,\n",
        " 'timed_out': False,\n",
        " '_shards': {'total': 5, 'successful': 5, 'skipped': 0, 'failed': 0},\n",
        " 'hits': {'total': 336,\n",
-       "  'max_score': 13.514879,\n",
+       "  'max_score': 5.764652,\n",
        "  'hits': [{'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': 'TRqVnmgBtrFpTVtEwd1e',\n",
-       "    '_score': 13.514879,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro mint raspberry 2018 /~велосипед cube access ws pro mint raspberry 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': '3hqAnmgBtrFpTVtEBc14',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowman kn2143/07 волна 2019 /~комбинезоны cool zone snowman kn2143/07 волна 2019',\n",
+       "     'Price': 20900}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': 'TBqVnmgBtrFpTVtEwd1Y',\n",
-       "    '_score': 12.355116,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro 27.5 mint raspberry 2018 /~велосипед cube access ws pro 27.5 mint raspberry 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': '4BqAnmgBtrFpTVtEBc2H',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowmobile kn2140/20 черный 2019 /~комбинезоны cool zone snowmobile kn2140/20 черный 2019',\n",
+       "     'Price': 21600}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': 'YhqQnmgBtrFpTVtE6tZb',\n",
-       "    '_score': 12.305433,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro black grey 2018 /~велосипед cube access ws pro black grey 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': 'QBqQnmgBtrFpTVtE9djU',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowman kn2143/07 волна 2019 /~комбинезоны cool zone snowman kn2143/07 волна 2019',\n",
+       "     'Attributes': 'Комбинезон Cool Zone SNOWMAN – наша классическая модель, разработанная еще в 2014 году и совершенствующаяся из года в год. Эргономичный крой. Центральная планка на магнитах.Усиление колен, внутренней части и низа штанин тканью Cordura. Горизонтальная молния для технических нужд. Съёмные подтяжки. Эргономичный капюшон. Мембрана:\\xa015000 мм/10000 гр/м2/24ч',\n",
+       "     'Price': 20900}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': '1xqRnmgBtrFpTVtEINlL',\n",
-       "    '_score': 12.305433,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro mint raspberry 2018 /~велосипед cube access ws pro mint raspberry 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': 'pG0Kn2gBYV0UizS0pcQL',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowman kn2143/20 черный 2019 /~комбинезоны cool zone snowman kn2143/20 черный 2019',\n",
+       "     'Attributes': 'Комбинезон Cool Zone SNOWMAN – наша классическая модель, разработанная еще в 2014 году и совершенствующаяся из года в год. Эргономичный крой. Центральная планка на магнитах.Усиление колен, внутренней части и низа штанин тканью Cordura. Горизонтальная молния для технических нужд. Съёмные подтяжки. Эргономичный капюшон. Мембрана:\\xa015000 мм/10000 гр/м2/24ч',\n",
+       "     'Price': 20900}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': '2BqRnmgBtrFpTVtEINlR',\n",
-       "    '_score': 12.305433,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro black grey 2018 /~велосипед cube access ws pro black grey 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': 'pm0Kn2gBYV0UizS0pcQX',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowmobile kn2140/28 болотный 2019 /~комбинезоны cool zone snowmobile kn2140/28 болотный 2019',\n",
+       "     'Attributes': 'Комбинезон для любителей езды на снегоходе.Плотная ткань, колени и низ штанин усилены тканью Кордура, высокий воротник защищает от ветра, предусмотрен специальный карман для рации, а вместительные накладные карманы на штанинах позволят взять с собой все самое необходимое. Как и остальные модели новой коллекции мы оснастили «Снегоход» съемными подтяжками и влагозащитной горизонтальной молнией для технических нужд.',\n",
+       "     'Price': 21600}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': '1hqRnmgBtrFpTVtEINlB',\n",
-       "    '_score': 12.178548,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro 27.5 mint raspberry 2018 /~велосипед cube access ws pro 27.5 mint raspberry 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': 'CG0Nn2gBYV0UizS0b8-C',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowmobile kn2140/28 болотный 2019 /~комбинезоны cool zone snowmobile kn2140/28 болотный 2019',\n",
+       "     'Attributes': 'Комбинезон для любителей езды на снегоходе.Плотная ткань, колени и низ штанин усилены тканью Кордура, высокий воротник защищает от ветра, предусмотрен специальный карман для рации, а вместительные накладные карманы на штанинах позволят взять с собой все самое необходимое. Как и остальные модели новой коллекции мы оснастили «Снегоход» съемными подтяжками и влагозащитной горизонтальной молнией для технических нужд.',\n",
+       "     'Price': 21600}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': 'YRqQnmgBtrFpTVtE6tZV',\n",
-       "    '_score': 11.788191,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro mint raspberry 2018 /~велосипед cube access ws pro mint raspberry 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': 'zRqHnmgBtrFpTVtEWtTN',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowmobile kn2140/28 болотный 2019 /~комбинезоны cool zone snowmobile kn2140/28 болотный 2019',\n",
+       "     'Price': 21600}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': 'ThqVnmgBtrFpTVtEwd1m',\n",
-       "    '_score': 11.788191,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro black grey 2018 /~велосипед cube access ws pro black grey 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': 'JhqVnmgBtrFpTVtEzN-I',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone kite kn2101/04 красный 2019 /~комбинезоны cool zone kite kn2101/04 красный 2019',\n",
+       "     'Attributes': 'Kомбинезон Cool Zone KITE - специализированный комбинезон для сноукайтинга. Эргономичный крой. Рукав реглан, дополнительные складки на спине для большей свободы движений, адаптированный вход в карманы под сидячую трапецию и высокий воротник для защиты от ветра. Вентиляция на штанах, рукавах и воротнике.Запатентованная съемная деталь для вывода крюка от трапеции, позволяющая крюку свободно двигаться и защищающая от попадания снега внутрь комбинезона. Усиление колен, внутренней части и низа штанин тканью Cordura. Горизонтальная молния для технических нужд. Съёмные подтяжки.',\n",
+       "     'Price': 21600}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': 'YBqQnmgBtrFpTVtE6tZP',\n",
-       "    '_score': 11.668395,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access ws pro 27.5 mint raspberry 2018 /~велосипед cube access ws pro 27.5 mint raspberry 2018',\n",
-       "     'Attributes': 'Женский горный велосипед с оборудованием предпрофессионального класса Shimano, 27 скоростей.Алюминиевая рама Aluminium Lite, амортизационная вилка Suntour XCM RL Disc с ходом 100 мм, двойные алюминиевые обода CUBE ZX20, дисковые гидравлические тормоза Shimano BR-M315. Подходит для активной езды по различным дорогам и пересеченной местности.',\n",
-       "     'Price': 52100}},\n",
+       "    '_id': 'LhqVnmgBtrFpTVtEzN--',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowmobile kn2140/20 черный 2019 /~комбинезоны cool zone snowmobile kn2140/20 черный 2019',\n",
+       "     'Attributes': 'Комбинезон для любителей езды на снегоходе.Плотная ткань, колени и низ штанин усилены тканью Кордура, высокий воротник защищает от ветра, предусмотрен специальный карман для рации, а вместительные накладные карманы на штанинах позволят взять с собой все самое необходимое. Как и остальные модели новой коллекции мы оснастили «Снегоход» съемными подтяжками и влагозащитной горизонтальной молнией для технических нужд.',\n",
+       "     'Price': 21600}},\n",
        "   {'_index': 'offer_search',\n",
        "    '_type': 'offer',\n",
-       "    '_id': '_hqRnmgBtrFpTVtEIdk5',\n",
-       "    '_score': 8.676878,\n",
-       "    '_source': {'Item': 'велосипеды / велосипеды / горные / cube / велосипед cube access wls race 27.5 lindgreen/blue 2017 /~велосипед cube access wls race 27.5 lindgreen/blue 2017',\n",
-       "     'Attributes': 'Горный велосипед Cube Access WLS Race 2017 отлично справится как со спортивным стилем езды по лесным тропам, так и со спокойным темпом по городским парковым аллеям и велодорожкам. Горный хардтейл для спортивных девушек.Легкая и прочная рама, изготовленная из алюминиевого сплава, имеет специальную женскую геометрию. Воздушная вилка SR Suntour XCR32 Air RL Disc оснащена функцией удаленной блокировки хода. Быстро и безопасно остановить велосипед помогут мощные гидравлические тормоза Shimano BR-M315. Навесное оборудование полупрофессионального уровня Shimano XT.',\n",
-       "     'Price': 85715}}]}}"
+       "    '_id': 'zm0An2gBYV0UizS0aLYb',\n",
+       "    '_score': 5.764652,\n",
+       "    '_source': {'Item': 'одежда / комбинезоны / cool zone / комбинезоны cool zone snowmobile kn2140/28 болотный 2019 /~комбинезоны cool zone snowmobile kn2140/28 болотный 2019',\n",
+       "     'Attributes': 'Комбинезон для любителей езды на снегоходе.Плотная ткань, колени и низ штанин усилены тканью Кордура, высокий воротник защищает от ветра, предусмотрен специальный карман для рации, а вместительные накладные карманы на штанинах позволят взять с собой все самое необходимое. Как и остальные модели новой коллекции мы оснастили «Снегоход» съемными подтяжками и влагозащитной горизонтальной молнией для технических нужд.',\n",
+       "     'Price': 21600}}]}}"
       ]
      },
      "execution_count": 9,
@@ -240,10 +237,10 @@
    "source": [
     "es.rank(\n",
     "    {\n",
-    "        'Item': 'Велосипед',\n",
-    "        'Attributes': 'женский горный',\n",
-    "        'Price_from': 50000,\n",
-    "        'Price_to': 100000,\n",
+    "        'Item': 'комбинезон',\n",
+    "        'Attributes': '',\n",
+    "        'Price_from': 0,\n",
+    "        'Price_to': 1000000,\n",
     "    }\n",
     ")"
    ]
